test/error/iocheck/err7.rzy
// Error: transition guard is not allowed to write state


interface
  IfaceEvent
    function event();
  end
  
component
  Err7
    input
      in  : IfaceEvent;
    
    output
      out : IfaceEvent;
    
    implementation hfsm(A)
    
    function foo:Boolean
      out.event();
      return True;
    end
    
    state A end
    state B end
    
    transition A to B by in.event() if foo();
    
  end

